KULRICE-5613 Selenium tests hooked up to the deploy process
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1863 eb505253-de9c-4f3b-bf87-3aad84f29c0f